--- a/src/Blog/Views/Shared/_Layout.cshtml
+++ b/src/Blog/Views/Shared/_Layout.cshtml
@@ -4,9 +4,8 @@
     <title>Blog</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    
+
     @Styles.Render("~/Styles/Bootstrap")
-    @Styles.Render("~/Styles/Bootstrap-rtl")
     @if (IsSectionDefined("styles"))
     {
         RenderSection("styles");
@@ -17,10 +16,17 @@
     {
         RenderSection("scripts");
     }
+
+    @if (CultureHelper.IsCurrentCultureRightToLeft())
+    {
+        @Styles.Render(CultureHelper.GetCultureSensitiveBundleName("~/Styles/Bootstrap", true))
+        @Scripts.Render(CultureHelper.GetCultureSensitiveBundleName("~/Scripts/Bootstrap", true));
+    }
+
 </head>
 <body dir="rtl">
     <div class="container">
-        <div class="navbar navbar-default navbar-right">
+        <div class="navbar navbar-default">
             <ul class="nav navbar-nav">
                 <li class="@Html.GetClassForNavbarItem("Home", "Index")">
                     @Html.ActionLink(@Resource.NavbarHome, "Index")
@@ -30,13 +36,13 @@
                 </li>
             </ul>
         </div>
-            <div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        @RenderBody()
-                    </div>
+        <div>
+            <div class="row">
+                <div class="col-sm-12">
+                    @RenderBody()
                 </div>
             </div>
+        </div>
     </div>
 </body>
 </html>
