--- a/src/Blog/Views/Shared/_Layout.cshtml
+++ b/src/Blog/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
     }
 
 </head>
-<body dir="rtl">
+<body @Html.DirectionAttribute()>
     <div class="container">
         <div class="navbar navbar-default">
             <ul class="nav navbar-nav">
