added the option to choose blog language

--- a/src/Blog/Views/Shared/_Layout.cshtml
+++ b/src/Blog/Views/Shared/_Layout.cshtml
@@ -26,6 +26,14 @@
 </head>
 <body @Html.DirectionAttribute()>
     <div class="container">
+        <div @Html.DirectionAttributeReverse()>
+            <a href="@Url.Action("ChangeLanguage", "Settings", new { language = "fa-IR", returnUrl = Request.RawUrl })">
+                <img src="~/Content/img/flag-ir.png" alt="@Resource.LanguageFarsi" />
+            </a>
+            <a href="@Url.Action("ChangeLanguage", "Settings", new { language = "en-US", returnUrl = Request.RawUrl })">
+                <img src="~/Content/img/flag-us.png" alt="@Resource.LanguageEnglish" />
+            </a>
+        </div>
         <div class="navbar navbar-default">
             <ul class="nav navbar-nav">
                 <li class="@Html.GetClassForNavbarItem("Home", "Index")">
